<resources>
    <string name="app_name">Firebase</string>
    <string name="sign_up">Sign-Up</string>
    <string name="login">Login</string>
    <string name="email">Your E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rptpassword">Repeat-Password</string>
    <string name="register">Register</string>
    <string name="signin">Sign-In</string>
</resources>