<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="20dp"
        android:text="Sign-Up"
        android:textColor="@color/white"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="18dp"
        android:textColorHint="#777777"
        app:layout_constraintEnd_toEndOf="@+id/signupemail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signupemail"
        app:layout_constraintTop_toBottomOf="@+id/signupemail" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:textColorHint="#777777"
        app:layout_constraintEnd_toEndOf="@+id/signup_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signup_username"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/signup_rpt_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/rptpassword"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:textColorHint="#777777"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <EditText
        android:id="@+id/signupemail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17.5dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17.5dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:textColorHint="#777777"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/edit_button_shape"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/kurale"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_in_btn" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/edit_button_shape"
        android:backgroundTint="@color/brown_dark"
        android:fontFamily="@font/kurale"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>